Adding some style to the website and a cool retro font.

--- a/about.html
+++ b/about.html
@@ -9,6 +9,18 @@
 </head>
 <body>
     <h1>About</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam molestiae eos libero quibusdam quis aut. Numquam enim cupiditate quo in consectetur quae quod laboriosam rerum suscipit adipisci, aspernatur quibusdam repellat, eos ut maiores! Magnam facere quisquam eaque repellendus necessitatibus consequuntur repudiandae deleniti vitae quasi. Ipsam ipsum, maiores unde delectus, quae nostrum error alias dignissimos recusandae, totam officia molestias tempore. Maiores, ipsa at necessitatibus a voluptatum voluptatem, sunt blanditiis optio fugiat earum, error nam ad maxime! Alias consequatur ratione aperiam dolores autem consectetur nostrum, assumenda, enim ut ipsum quas quaerat, provident totam culpa vel asperiores exercitationem ullam? Neque voluptate eaque quis.</p>
+    <h2>About</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident corrupti praesentium nisi temporibus voluptatum, minus possimus earum aliquid quod consectetur quae deleniti quos repellat laborum, at qui itaque voluptatibus cumque.</p>
+    <h3>About</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium illum officia excepturi nam molestias a ducimus sequi, architecto veniam vero.</p>
+    <h4>About</h4>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos eveniet aut, soluta iste deleniti molestiae nam temporibus obcaecati, molestias esse aliquid totam autem dolorem voluptates sunt expedita alias consequuntur ea sint blanditiis pariatur quasi in. Necessitatibus tempore officiis dolor officia est ipsum, numquam et rem iste ipsa sequi deserunt voluptates!</p>
+    <h5>About</h5>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt provident recusandae sint unde, necessitatibus quisquam culpa? Voluptatum iste, nihil dolorem eum ex nemo id veritatis dignissimos in quisquam dolore enim, non, ipsam possimus consequuntur perferendis. Vero suscipit labore esse repellendus nemo dolore, reprehenderit veritatis at sapiente delectus voluptas earum eveniet cupiditate, fugit quibusdam. Iusto beatae eius, accusantium aspernatur quae at velit iste vitae atque eos doloribus in et, possimus suscipit eaque quaerat illum odit deserunt consectetur repudiandae quod veniam excepturi. Doloremque commodi ipsa eligendi? Quas qui beatae deserunt corporis sequi itaque cum eum, ad, aliquid unde possimus error, vel obcaecati?</p>
+    <h6>About</h6>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus ut tempora, eaque consectetur facere sit voluptates recusandae sint rerum atque quam numquam nostrum. Expedita maxime sint vel hic. Blanditiis dolor quibusdam culpa aliquid, aliquam sapiente, saepe eos eligendi ea perferendis dolorem facere doloribus consequuntur nulla delectus velit, esse quia cumque.</p>
+    
     <script src="js/main.js"></script>
 </body>
 </html>
