--- a/games.html
+++ b/games.html
@@ -9,6 +9,17 @@
 </head>
 <body>
     <h1>Games</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident, aperiam reprehenderit? Illo quas sint quisquam optio laborum eos! Eius quae dicta eveniet quas. Sit fuga aperiam minus possimus sed praesentium amet, quo ducimus dolorem? Nulla et aspernatur aliquid debitis. Repellat molestiae libero recusandae voluptates doloribus amet ipsam quod mollitia dicta rerum fugiat quia magnam, nesciunt et cupiditate molestias itaque reprehenderit eveniet, eum facere? Reprehenderit illum nisi pariatur ex blanditiis magni, sed earum accusantium sint veritatis delectus, iste quaerat exercitationem et at labore a ab officia ea? Excepturi unde rem assumenda cumque minus molestiae et reiciendis, culpa debitis odio harum omnis.</p>
+    <h2>Games</h2>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam, explicabo, cumque, sunt laboriosam quae quas suscipit repellendus sit quo autem a aliquid eos similique dignissimos possimus. Quia itaque perspiciatis reiciendis!</p>
+    <h3>Games</h3>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus maiores non illum pariatur, id voluptatem nostrum asperiores eos inventore tempore.</p>
+    <h4>Games</h4>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet id tempore voluptatem cumque, dicta consequuntur quam ad tempora quae quaerat ratione minus! Incidunt veritatis debitis sit in aliquid voluptatem, libero eius explicabo animi quaerat nisi possimus fugit eligendi pariatur assumenda commodi est voluptates maxime! Nam velit eaque alias ipsa quod.</p>
+    <h5>Games</h5>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint, fugit voluptate optio laudantium animi dolores. Omnis aliquam deserunt tempore nihil vitae animi ea maxime quae quo unde, perferendis explicabo enim? Beatae, veritatis molestias. Qui itaque, enim incidunt corrupti asperiores consequuntur provident sapiente tempore soluta temporibus quibusdam dolorum voluptas nihil fugit aliquam, impedit iusto dolor non voluptatem, labore voluptatum iure. Id vero voluptate ipsa, adipisci expedita officiis suscipit repellendus velit dolore aperiam illo libero pariatur nisi similique mollitia perferendis debitis veritatis quos ducimus. Nemo itaque non autem dolor possimus? Exercitationem necessitatibus repellat, deleniti perferendis dignissimos debitis vero corporis atque aspernatur consequuntur!</p>
+    <h6>Games</h6>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti magnam veritatis hic pariatur aliquid omnis, modi ratione aspernatur eligendi corrupti magni unde quo vel tempora distinctio sunt minus voluptatum quibusdam sequi. Corporis quis magni illo, quasi aperiam omnis quos fugit animi, consequuntur ut tempore explicabo minima enim nostrum, corrupti quo!</p>
     <script src="js/main.js"></script>
 </body>
 </html>
