--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/theme-dark.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="shortcut icon" href="ico/pifmgr_0011.ico" type="image/x-icon">
     <title>About | Kyuu's Abandonware Portal</title>
 </head>
 <body>
@@ -22,5 +24,6 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus ut tempora, eaque consectetur facere sit voluptates recusandae sint rerum atque quam numquam nostrum. Expedita maxime sint vel hic. Blanditiis dolor quibusdam culpa aliquid, aliquam sapiente, saepe eos eligendi ea perferendis dolorem facere doloribus consequuntur nulla delectus velit, esse quia cumque.</p>
     
     <script src="js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
