--- a/games.html
+++ b/games.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/theme-dark.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="shortcut icon" href="ico/pifmgr_0011.ico" type="image/x-icon">
     <title>Games | Kyuu's Abandonware Portal</title>
 </head>
 <body>
@@ -21,5 +23,6 @@
     <h6>Games</h6>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti magnam veritatis hic pariatur aliquid omnis, modi ratione aspernatur eligendi corrupti magni unde quo vel tempora distinctio sunt minus voluptatum quibusdam sequi. Corporis quis magni illo, quasi aperiam omnis quos fugit animi, consequuntur ut tempore explicabo minima enim nostrum, corrupti quo!</p>
     <script src="js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
