--- a/software.html
+++ b/software.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/theme-dark.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="shortcut icon" href="ico/pifmgr_0011.ico" type="image/x-icon">
     <title>Software | Kyuu's Abandonware Portal</title>
 </head>
 <body>
@@ -21,5 +23,6 @@
     <h6>Software</h6>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit ipsam, possimus accusamus consequuntur hic vitae non, velit, nesciunt earum et delectus. Voluptatem aliquid dolor laudantium facilis. At, laudantium accusantium? Natus necessitatibus ipsam dolores libero, repellat nulla et! Perspiciatis ea id, eius voluptatibus magnam magni eligendi corporis dolorem blanditiis maiores cupiditate?</p>
     <script src="js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
